# TermGalaga

./: .gitignore  CMakeLists.txt  README.md  TermGalaga.cpp  game-file
include/: GameWindow.h
include/Entities/: Entity.h  Player.h
src/: GameWindow.cpp  TermGalaga.cpp
src/Entities/: Entity.cpp  Player.cpp
